--- a/trunk/src/components/ColorSetHex.mxml
+++ b/trunk/src/components/ColorSetHex.mxml
@@ -7,6 +7,9 @@
 			[Bindable]
 			public var dataProvider:ArrayCollection;
 			
+			[Bindable]
+			public var turn:Number = 0;
+			
 			private function colorString(inVal:uint):String {
 				var fillString:String = "000000";
 				var tempString:String = "";
@@ -22,7 +25,7 @@
 	<mx:GridRow width="100%" height="100%">
 		<mx:Repeater id="gridItemRepeat" dataProvider="{dataProvider}">
 			<mx:GridItem width="100%" height="100%">
-				<mx:Label id="hexCol" styleName="colorLabel" selectable="true" text="{'#'+colorString(gridItemRepeat.currentItem as uint)}"/>
+				<mx:Label id="hexCol" styleName="colorLabel" selectable="true" text="{'#'+colorString(gridItemRepeat.currentItem as uint)}" rotation="{turn}"/>
 			</mx:GridItem>
 		</mx:Repeater>
 	</mx:GridRow>
