--- a/trunk/src/css/colorswatch.css
+++ b/trunk/src/css/colorswatch.css
@@ -106,6 +106,11 @@ ToolTip {
 	font-weight:			normal;
 }
 
+.whiteShadowed {
+	color:					#FFFFFF;
+	drop-shadow-enabled:	true;
+}
+
 /*@font-face{
 	src:						url(Helvetica.swf);
 	fontFamily:					"Helvetica";
